@@ -16,7 +16,11 @@
 	Add descriptions for these PyGTK 2.4 methods.
 	(gtk.gdk.pixbuf_loader_new_with_mime_type)
 	Add description for this PyGTK 2.4 function
-	("size-prepared") Add desription of this GTK+ 2.2 signal..
+	("size-prepared") Add desription of this GTK+ 2.2 signal.
+
+	* pygtk-gdkpixmap.xml (gtk.gdk.pixmap_foreign_new_for_display)
+	(gtk.gdk.pixmap_lookup_for_display) Add descriptions for these
+	PyGTK 2.2 functions.
 
 2004-04-21  John Finlay  <finlay@moeraki.com>
 
